--- a/app/views/checks/show.html.erb
+++ b/app/views/checks/show.html.erb
@@ -1,3 +1,5 @@
 <h3>Check <%= "#{@check.id}" %></h3>
 
-<%= link_to "Add/Change Items", edit_check_path(@check) %>
+<%= link_to "Add/Change Items", edit_check_path(@check) %><br><br>
+
+<%= link_to "Back to all checks", checks_path %>
