--- a/app/views/application/hello.html.erb
+++ b/app/views/application/hello.html.erb
@@ -1,8 +1,11 @@
 <h1>Please Enter Your Pin to Log in or Click the Button to Sign Up</h1>
 
 <%= form_tag controller: 'application', action: 'login' do%>
-<%= f.label :pin, "Pin Number:" %>
-<%= f.number_field :pin %>
+    <%= label_tag :pin, "Pin Number:" %>
+    <%= number_field_tag :pin, maxlength: 4 %>
+    <%= submit_tag "Log In" %>
         
 <% end %>
+
+<%= link_to "Sign Up", new_server_path %>
   
