Pushed before lecture

--- a/app/views/checks/show.html.erb
+++ b/app/views/checks/show.html.erb
@@ -5,6 +5,7 @@
 <% end %>
 <br>
 <br>
+Total............<%= @check.total %><br><br>
 
 <%= link_to "Add/Change Items", edit_check_path(@check) %><br><br>
 
