--- a/app/views/checks/edit.html.erb
+++ b/app/views/checks/edit.html.erb
@@ -1,5 +1,7 @@
 <h4>Editing Check <%= "#{@check.id}" %></h4>
 
+<%= link_to "Add Item", session_check_path(@check) %><br><br>
+
 <%= form_for(@check) do |f| %>
     <%= f.collection_select :food_id, Food.all, :id, :name %>
     <%= f.submit %>        
