--- a/app/views/checks/show.html.erb
+++ b/app/views/checks/show.html.erb
@@ -1,12 +1,12 @@
 <h3>Check <%= "#{@check.id}" %></h3>
 
 <% @check.foods.each do |food| %>
-    <%= food.name %>............<%= food.price %><br>
+    <%= food.name %>............$<%= food.price %><br>
 <% end %>
 <br>
 <br>
-Total............<%= @check.total %><br><br>
+Total............$<%= @check.total %><br><br>
 
 <%= link_to "Add/Change Items", edit_check_path(@check) %><br><br>
 
-<%= link_to "Back to all checks", checks_path %>
+<%= link_to "Back to your checks", server_path(@check.server) %>
