--- a/app/views/servers/show.html.erb
+++ b/app/views/servers/show.html.erb
@@ -4,6 +4,7 @@
 <% end %>
 <br>
 <h2><%=link_to "New Table", checks_path, method: :post%></h2>
+<%= link_to "Menu", foods_path %>
 <br><br>
 <%=link_to "Sign Out", logout_path  %>
 
