--- a/app/views/servers/show.html.erb
+++ b/app/views/servers/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Hi <%= @server.name %>, here are your current tables:</h1> <br>
     <% @server.checks.each do |check| %>
-    <p><%=link_to check.id, check_path(check) %><p> <br>
+    <p><%=link_to "#{check.id} - #{check.paid_status}", check_path(check) %><p>
 <% end %>
 <br>
 <h2><%=link_to "New Table", checks_path, method: :post%></h2>
