--- a/app/views/checks/show.html.erb
+++ b/app/views/checks/show.html.erb
@@ -11,3 +11,9 @@ Total............$<%= @check.total %><br><br>
 <%= link_to "Add/Change Items", edit_check_path(@check) %><br><br>
 
 <%= link_to "Back to your checks", server_path(@check.server) %>
+
+<% if @check.paid_status != "paid" %>
+    <h3><%= link_to "Pay Check", payment_path(@check) %></h3>
+<% else %>
+    <h3><%= link_to "Refund Check", refund_path(@check) %></h3>
+<% end %>
