--- a/app/views/checks/show.html.erb
+++ b/app/views/checks/show.html.erb
@@ -2,7 +2,13 @@
 
 <% @check.orders.each do |order| %>
     <%= order.food.name %>............$<%= order.food.price %> - <%= link_to "Modify?", new_order_modification_path(order.id) %> - <%= link_to 'Remove Item',  order,  method: :delete %><br>
-    
+    <% if order.modifications.any? %>
+      <ul>
+      <% order.modifications.each do |m| %>
+        <li><%= m.note %>............$<%= m.price %></li>
+          <% end %>
+      </ul>
+    <% end %>
 <% end %>
 <br>
 <br>
