--- a/app/views/foods/_dessert.html.erb
+++ b/app/views/foods/_dessert.html.erb
@@ -2,7 +2,7 @@
 <ul>
 <% @foods.where(food_type: "Dessert").each do |dessert|  %>
 <li>
-    <%= dessert.name %> - <%= dessert.price %><br><br>
+    <%= dessert.name %> - $<%= dessert.price %><br><br>
 </li>
 <% end %>
 </ul>
