--- a/app/views/foods/_pizza.html.erb
+++ b/app/views/foods/_pizza.html.erb
@@ -2,7 +2,7 @@
 <ul>
 <% @foods.where(food_type: "Pizza").each do |pizza|  %>
 <li>
-    <%= pizza.name %> - <%= pizza.price %><br><br>
+    <%= pizza.name %> - $<%= pizza.price %><br><br>
 </li>
 <% end %>
 </ul>
