--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -34,6 +34,8 @@
     <%= submit_tag "All Menu Items" %>
 <% end %>
 
+<a href='/'><button>Exit Menu</button></a>
+
 <h3>Menu Items</h3>
 
 <% case @food_type %>
