--- a/app/views/checks/show.html.erb
+++ b/app/views/checks/show.html.erb
@@ -14,9 +14,19 @@
 
 <br>
 <br>
-Total............$<%= @check.total %><br><br><br>
+Total............$<%= @check.total %><br>
 
-<a href=<%=add_item_path(@check)%>><button>Add/Change Items</button></a><br><br>
+<%= form_tag add_tip_path do%>
+<%= label_tag "Tip............$" %>
+<%= text_field_tag "check[tip]", @check.tip %>
+<%= submit_tag "Save Tip" %>
+<% end %>
+
+
+
+<br><br>
+
+<a href=<%=add_item_path(@check)%>><button>Add Items</button></a><br><br>
 
 <a href=<%=server_path(@check.server)%>><button>Back to your Checks</button></a>                          
 
