--- a/app/views/checks/show.html.erb
+++ b/app/views/checks/show.html.erb
@@ -15,6 +15,7 @@
 <br>
 <br>
 Total............$<%= @check.total %><br>
+Tax..............$<%= @check.tax %><br>
 
 <%= form_tag add_tip_path do%>
 <%= label_tag "Tip............$" %>
@@ -22,13 +23,15 @@ Total............$<%= @check.total %><br>
 <%= submit_tag "Save Tip" %>
 <% end %>
 
+Grand Total......$<%= @check.grand_total %>
+
 
 
 <br><br>
 
 <a href=<%=add_item_path(@check)%>><button>Add Items</button></a><br><br>
 
-<a href=<%=server_path(@check.server)%>><button>Back to your Checks</button></a>                          
+<a href=<%=server_path(@check.server)%>><button>Back to your Checks</button></a>
 
 
 
@@ -39,4 +42,3 @@ Total............$<%= @check.total %><br>
    <h1 align="center"><a href=<%=refund_path(@check)%>><button style="font-size : 25px;">Refund Check</button></a></h1>
     <%# link_to "Refund Check", refund_path(@check) %>
 <% end %>
-
