--- a/app/views/checks/show.html.erb
+++ b/app/views/checks/show.html.erb
@@ -1,24 +1,41 @@
 <h3>Check <%= "#{@check.id}" %></h3>
 
-<% @check.orders.each do |order| %>
-
-    <%= order.food.name %>............$<%= order.food.price %> - <%= link_to "Add modification", new_order_modification_path(order.id) %> - <%= link_to 'Remove Item',  order,  method: :delete %><br>
-    <% if order.modifications.any? %>
-      <ul>
-      <% order.modifications.each do |m| %>
-        <li><%= m.note %>............$<%= m.price %> - <%= link_to 'Remove Modifier',  order_modification_path(order, m),  method: :delete %></li>
-          <% end %>
-      </ul>
+<table class="ui striped table">
+  <thead>
+    <tr>
+      <th>Food Item</th>
+      <th>Food Price</th>
+      <th>Modifications</th>
+      <th>Modification - Price</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @check.orders.each.each do |order| %>
+        <tr>
+            <td><p><%= order.food.name %>  -   <%= link_to 'Remove Item',  order,  method: :delete %></p><br></td>
+            <td><%=number_to_currency(order.food.price, unit: '$') %></td>
+            <td><%= link_to "Add modification", new_order_modification_path(order.id) %><br>
+              <ul><% order.modifications.each do |m| %>
+              <li><%=m.note %>  -    <%= link_to 'Remove Modifier',  order_modification_path(order, m),  method: :delete %></li><br>
+              <% end %></ul>
+            </td>
+            <td><% order.modifications.each do |m| %>
+              <%=number_to_currency(m.price, unit: '$') %><br>
+              <% end %>
+            </td>
+        </tr>
     <% end %>
-<% end %>
+    </tbody>
+</table>
+
 
 <br>
 <br>
 Total............$<%= @check.total %><br><br><br>
 
-<a href=<%=add_item_path(@check)%>><button>Add/Change Items</button></a><br><br>
+<a href=<%=add_item_path(@check)%>><button class="ui button">Add/Change Items</button></a><br><br>
 
-<a href=<%=server_path(@check.server)%>><button>Back to your Checks</button></a>                          
+<a href=<%=server_path(@check.server)%>><button class="ui button" >Back to your Checks</button></a>                          
 
 
 
