--- a/app/assets/stylesheets/checks.scss
+++ b/app/assets/stylesheets/checks.scss
@@ -1,4 +1,8 @@
 // Place all the styles related to the Checks controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-@import "semantic-ui"
+@import "semantic-ui";
+
+body {
+    margin: 35px;
+}
