--- a/app/views/foods/_pasta.html.erb
+++ b/app/views/foods/_pasta.html.erb
@@ -2,7 +2,8 @@
 <ul>
 <% @foods.where(food_type: "Pasta").each do |pasta|  %>
 <li>
-    <%= pasta.name %> - $<%= pasta.price %><br><br>
+    <%= pasta.name %> - $<%= pasta.price %> -
+    <%= link_to 'Remove Item', pasta,  method: :delete %><br><br>
 </li>
 <% end %>
 </ul>
