--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -1,3 +1,5 @@
+<h1>Restaurant Menu</h1>
+
 <% if session[:check_to_edit] %>
     <h2>Editing Check #<%= session[:check_to_edit]['id'] %></h2>
 <% end %>
@@ -41,9 +43,12 @@
     <% end %> 
 <% end %><br>
 
+<a href='/foods/new'><button class="ui button">Add New Menu Item</button></a>
 <a href='/'><button class="ui button">Exit Menu</button></a>
 
-<h3>Menu Items</h3>
+<% if @food_type %>
+    <h3>Menu Items</h3>
+<% end %>
 
 <% case @food_type %>
 <% when 'appetizer' %>
