--- a/app/views/checks/show.html.erb
+++ b/app/views/checks/show.html.erb
@@ -1,4 +1,4 @@
-<h3>Check <%= "#{@check.id}" %></h3>
+<h3><% if @check.paid_status == "unpaid" %>Ticket <% else %>Check <% end %><%= "#{@check.id}" %></h3>
 
 <table class="ui striped table">
   <thead>
