--- a/app/views/foods/_entree.html.erb
+++ b/app/views/foods/_entree.html.erb
@@ -2,8 +2,8 @@
 <ul>
 <% @foods.where(food_type: "Entree").each do |entree|  %>
 <li>
-    <%= entree.name %> - $<%= entree.price %> -
-    <%= link_to 'Remove Item', entree,  method: :delete %><br><br>
+    <%= entree.name %> - $<%= entree.price %>
+    <%= button_to 'Remove Item', entree,  method: :delete, form: {style: 'display:inline-block;'} %><br><br>
 </li>
 <% end %>
 </ul>
