--- a/app/views/foods/_appetizer.html.erb
+++ b/app/views/foods/_appetizer.html.erb
@@ -2,8 +2,8 @@
 <ul>
     <% @foods.where(food_type: "Appetizer").each do |appetizer|  %>
         <li>
-            <%= appetizer.name %> - <%=number_to_currency(appetizer.price, unit: '$') %> -
-            <%= link_to 'Remove Item',  appetizer,  method: :delete %><br><br>
+            <%= appetizer.name %> - <%=number_to_currency(appetizer.price, unit: '$') %>
+            <%= button_to 'Remove Item',  appetizer,  method: :delete, form: {style: 'display:inline-block;'} %><br><br>
         </li>
     <% end %>
 </ul>
