--- a/app/assets/stylesheets/checks.scss
+++ b/app/assets/stylesheets/checks.scss
@@ -5,5 +5,45 @@
 
 body {
     margin: 35px;
-    background-color: LightBlue;
+    background-color: BlanchedAlmond;
+}
+
+.server-image {
+    float: right;
+    width: 500px;
+    margin-right: 105px;
+    border: 5px solid black;
+    padding: 5px;
+}
+
+
+p {
+  font-family: Lucida;
+  font-size: 15px;
+  font-color: black;
+  font-style: normal;
+}
+h1 {
+  font-family: Lucida;
+  font-size: 30px;
+  font-color: black;
+  text-align: left;
+}
+h2 {
+  font-family: Lucida;
+  font-size: 30px;
+  font-color: black;
+}
+h3 {
+  font-family: Lucida;
+  font-size: 20px;
+  font-color: black;
+}
+table {
+  font-size: 20px;
+  font-family: Lucida;
+}
+tr {
+    text-align: left;
+    margin: 30px;
 }
