--- a/app/views/checks/show.html.erb
+++ b/app/views/checks/show.html.erb
@@ -36,7 +36,7 @@ Total............<%= number_to_currency(@check.total) %><br>
 Tax..............<%= number_to_currency(@check.tax) %><br>
 
 <% if @check.gratuity > 0 %>
-  Gratuity.........$<%= @check.gratuity %><br>
+  Gratuity.........$<%= number_to_currency(@check.gratuity) %><br>
 <% end %>
 
 <%= form_tag add_tip_path do%>
