--- a/app/views/checks/show.html.erb
+++ b/app/views/checks/show.html.erb
@@ -1,6 +1,6 @@
 <h3><% if @check.paid_status == "unpaid" %>Ticket <% else %>Check <% end %><%= "#{@check.id}" %></h3>
 
-<table class="ui striped table">
+<table class="ui yellow table">
   <thead>
     <tr>
       <th>Food Item</th>
