--- a/app/views/foods/index.html.erb
+++ b/app/views/foods/index.html.erb
@@ -71,7 +71,7 @@
 
 <h3>Menu Items Sold</h3>
 
-<table class="ui striped table">
+<table class="ui yellow table">
     <thead>
       <tr>
         <th>Food Item</th>
