--- a/app/assets/stylesheets/checks.scss
+++ b/app/assets/stylesheets/checks.scss
@@ -16,6 +16,14 @@ body {
     padding: 5px;
 }
 
+.logo-image {
+    float: right;
+    width: 500px;
+    margin-right: 105px;
+    margin-top: 5px;
+    padding: 5px;
+}
+
 p {
   font-family: Lucida;
   font-size: 15px;
