--- a/app/views/application/hello.html.erb
+++ b/app/views/application/hello.html.erb
@@ -1,4 +1,9 @@
-<h1>Please Enter Your Pin to Log in or Click the Button to Sign Up</h1>
+<h3>Welcome to</h3>
+<%= image_tag("android-o-logo.png", class: "logo-image") %>
+<h1 style="font-size: 150px;"">ORDERLI</h1>
+
+
+<h3>Please enter your PIN to log in or click the button to sign up</h3>
 
 <% if @message %>
     <%= @message %><br><br>
