Preparing for heroku

--- a/app/assets/stylesheets/checks.scss
+++ b/app/assets/stylesheets/checks.scss
@@ -18,7 +18,7 @@ body {
 
 .logo-image {
     float: right;
-    width: 250px;
+    width: 500px;
     margin-right: 105px;
     margin-top: 5px;
     padding: 5px;
@@ -27,27 +27,27 @@ body {
 p {
   font-family: Lucida;
   font-size: 15px;
-  font-color: black;
+  color: black;
   font-style: normal;
 }
 
 h1 {
   font-family: Lucida;
   font-size: 30px;
-  font-color: black;
+  color: black;
   text-align: left;
 }
 
 h2 {
   font-family: Lucida;
   font-size: 25px;
-  font-color: black;
+  color: black;
 }
 
 h3 {
   font-family: Lucida;
   font-size: 20px;
-  font-color: black;
+  color: black;
 }
 
 table {
